--- a/package.json
+++ b/package.json
@@ -8,13 +8,21 @@
         "@testing-library/user-event": "^13.5.0",
         "algoliasearch": "^4.13.0",
         "bootstrap": "^5.1.3",
+        "chart.js": "^3.7.1",
         "country-flag-icons": "^1.4.25",
         "react": "^18.0.0",
         "react-bootstrap": "^2.2.3",
         "react-bootstrap-icons": "^1.8.1",
+        "react-chartjs-2": "^4.1.0",
+        "react-compound-slider": "^3.3.1",
         "react-dom": "^18.0.0",
+        "react-instantsearch-dom": "^6.23.4",
         "react-instantsearch-hooks": "^6.23.3",
+        "react-router-dom": "^6.3.0",
         "react-scripts": "5.0.1",
+        "react-simple-maps": "npm:react-simple-maps@^2.3.0",
+        "react-simple-maps-globe": "npm:react-simple-maps@0.11.1",
+        "react-tooltip": "^4.2.21",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
